force-app/main/default/objects/Context__c/Context__c.object-meta.xml
<CustomObject>
    <description>A place to put information about each Apex context we have investigated.</description>
    <label>Context</label>
    <nameField>
        <label>Context Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contexts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>