force-app/main/default/objects/Context__c/fields/AggregateQueries__c.field-meta.xml
<CustomField>
    <fullName>AggregateQueries__c</fullName>
    <description>The total number of aggregate queries that can be processed with SOQL query statements.</description>
    <inlineHelpText>The total number of aggregate queries that can be processed with SOQL query statements.</inlineHelpText>
    <label>Aggregate Queries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>