force-app/main/default/objects/Context__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if a batch Apex job invoked the executing code, or false if not. In API version 35.0 and earlier, also returns true if a queueable Apex job invoked the code.</description>
    <inlineHelpText>True if a batch Apex job invoked the executing code, or false if not. In API version 35.0 and earlier, also returns true if a queueable Apex job invoked the code.</inlineHelpText>
    <label>Batch</label>
    <type>Checkbox</type>
</CustomField>