force-app/main/default/objects/Context__c/fields/Callouts__c.field-meta.xml
<CustomField>
    <fullName>Callouts__c</fullName>
    <description>The total number of Web service statements that can be processed.</description>
    <inlineHelpText>The total number of Web service statements that can be processed.</inlineHelpText>
    <label>Callouts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>