force-app/main/default/objects/Context__c/fields/CpuTime__c.field-meta.xml
<CustomField>
    <fullName>CpuTime__c</fullName>
    <description>The time limit (in milliseconds) of CPU usage in the current transaction.</description>
    <inlineHelpText>The time limit (in milliseconds) of CPU usage in the current transaction.</inlineHelpText>
    <label>Cpu Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>