force-app/main/default/objects/Context__c/fields/DMLRows__c.field-meta.xml
<CustomField>
    <fullName>DMLRows__c</fullName>
    <description>The total number of records that can be processed with any statement that counts against DML limits, such as DML statements, the database.EmptyRecycleBin method, and other methods.</description>
    <inlineHelpText>The total number of records that can be processed with any statement that counts against DML limits, such as DML statements, the database.EmptyRecycleBin method, and other methods.</inlineHelpText>
    <label>DML Rows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>