force-app/main/default/objects/Context__c/fields/DMLStatements__c.field-meta.xml
<CustomField>
    <fullName>DMLStatements__c</fullName>
    <description>The total number of DML statements or the database.EmptyRecycleBin methods that can be called.</description>
    <inlineHelpText>The total number of DML statements or the database.EmptyRecycleBin methods that can be called.</inlineHelpText>
    <label>DML Statements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>