force-app/main/default/objects/Context__c/fields/EmailInvocations__c.field-meta.xml
<CustomField>
    <fullName>EmailInvocations__c</fullName>
    <description>The total number of email invocation (such as sendEmail) that can be called.</description>
    <inlineHelpText>The total number of email invocation (such as sendEmail) that can be called.</inlineHelpText>
    <label>Email Invocations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>