force-app/main/default/objects/Context__c/fields/Future__c.field-meta.xml
<CustomField>
    <fullName>Future__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the currently executing code is invoked by code contained in a method annotated with future; false otherwise.</description>
    <inlineHelpText>True if the currently executing code is invoked by code contained in a method annotated with future; false otherwise.</inlineHelpText>
    <label>Future</label>
    <type>Checkbox</type>
</CustomField>