force-app/main/default/objects/Context__c/fields/FutureCalls__c.field-meta.xml
<CustomField>
    <fullName>FutureCalls__c</fullName>
    <description>The total number of methods with the future annotation that can be executed (not necessarily completed).</description>
    <inlineHelpText>The total number of methods with the future annotation that can be executed (not necessarily completed).</inlineHelpText>
    <label>Future Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>