force-app/main/default/objects/Context__c/fields/HeapSize__c.field-meta.xml
<CustomField>
    <fullName>HeapSize__c</fullName>
    <description>The total amount of memory (in bytes) that can be used for the heap.</description>
    <inlineHelpText>The total amount of memory (in bytes) that can be used for the heap.</inlineHelpText>
    <label>Heap Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>