force-app/main/default/objects/Context__c/fields/MobilePushApexCalls__c.field-meta.xml
<CustomField>
    <fullName>MobilePushApexCalls__c</fullName>
    <description>The number of Apex calls that have been used by mobile push notifications during the current metering interval.</description>
    <inlineHelpText>The number of Apex calls that have been used by mobile push notifications during the current metering interval.</inlineHelpText>
    <label>Mobile Push Apex Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>