force-app/main/default/objects/Context__c/fields/Queries__c.field-meta.xml
<CustomField>
    <fullName>Queries__c</fullName>
    <description>The total number of SOQL queries that can be issued.</description>
    <inlineHelpText>The total number of SOQL queries that can be issued.</inlineHelpText>
    <label>Queries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>