force-app/main/default/objects/Context__c/fields/QueryLocatorRows__c.field-meta.xml
<CustomField>
    <fullName>QueryLocatorRows__c</fullName>
    <description>The total number of records that can be returned by the Database.getQueryLocator method.</description>
    <inlineHelpText>The total number of records that can be returned by the Database.getQueryLocator method.</inlineHelpText>
    <label>Query Locator Rows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>