force-app/main/default/objects/Context__c/fields/QueryRows__c.field-meta.xml
<CustomField>
    <fullName>QueryRows__c</fullName>
    <description>The total number of records that can be returned by issuing SOQL queries.</description>
    <inlineHelpText>The total number of records that can be returned by issuing SOQL queries.</inlineHelpText>
    <label>Query Rows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>