force-app/main/default/objects/Context__c/fields/Queueable__c.field-meta.xml
<CustomField>
    <fullName>Queueable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if a queueable Apex job invoked the executing code. Returns false if not, including if a batch Apex job or a future method invoked the code.</description>
    <inlineHelpText>True if a queueable Apex job invoked the executing code. Returns false if not, including if a batch Apex job or a future method invoked the code.</inlineHelpText>
    <label>Queueable</label>
    <type>Checkbox</type>
</CustomField>