force-app/main/default/objects/Context__c/fields/QueueableJobs__c.field-meta.xml
<CustomField>
    <fullName>QueueableJobs__c</fullName>
    <description>The maximum number of queueable jobs that can be added to the queue per transaction. A queueable job corresponds to a class that implements the Queueable interface.</description>
    <inlineHelpText>The maximum number of queueable jobs that can be added to the queue per transaction. A queueable job corresponds to a class that implements the Queueable interface.</inlineHelpText>
    <label>Queueable Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>