force-app/main/default/objects/Context__c/fields/Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the currently executing code is invoked by a scheduled Apex job; false otherwise.</description>
    <inlineHelpText>True if the currently executing code is invoked by a scheduled Apex job; false otherwise.</inlineHelpText>
    <label>Scheduled</label>
    <type>Checkbox</type>
</CustomField>