force-app/main/default/objects/Context__c/fields/SoslQueries__c.field-meta.xml
<CustomField>
    <fullName>SoslQueries__c</fullName>
    <description>The total number of SOSL queries that can be issued.</description>
    <inlineHelpText>The total number of SOSL queries that can be issued.</inlineHelpText>
    <label>Sosl Queries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>