force-app/main/default/objects/Context__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Batch__c</columns>
    <columns>Future__c</columns>
    <columns>Queueable__c</columns>
    <columns>Scheduled__c</columns>
    <columns>Callouts__c</columns>
    <columns>CpuTime__c</columns>
    <columns>HeapSize__c</columns>
    <columns>FutureCalls__c</columns>
    <columns>QueueableJobs__c</columns>
    <columns>AggregateQueries__c</columns>
    <columns>Queries__c</columns>
    <columns>QueryLocatorRows__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>